writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/unused_label.c
 
int main(void) {
unused:
    return 0;
}