writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/extra_credit/undeclared_var_in_labeled_statement.c
 

int main(void) {
lbl:
    return a;
    return 0;
}